2008-01-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/20copyfiles
	(copy_file): Add checks that source and destination both exist.

	* bin/schroot/Makefile.am
	(pkgsysconf_DATA): Add copyfiles-defaults.

2008-01-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-setup.5.in: Replace 20network and 30passwd
	with 20copyfiles.

	* bin/schroot/setup/Makefile.am
	(setup_SCRIPTS): Remove 20network and 30passwd, and add
	20copyfiles.

	* bin/schroot/setup/30passwd: Remove.

	* bin/schroot/setup/20copyfiles: Move from 20network.  Read
	COPYFILES file, and copy files into chroot.

	* bin/schroot/script-defaults: Add COPYFILES.

	* bin/schroot/copyfiles-defaults: New file.  Files to copy into
	the chroot.

2008-01-19  Roger Leigh  <rleigh@debian.org>

	* bin/schroot-listmounts/schroot-listmounts-main.cc
	(main::action_listmounts): Output mounts in reverse mount order, i.e.
	order for unmounting.

2008-01-19  Roger Leigh  <rleigh@debian.org>

	* po/vi.po: Update Vietnamese translation.  Thanks to Clytie
	Siddall.

2008-01-18  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Generate scripts/po-notify.

	* scripts/po-notify.in: New script to notify translators.

2008-01-18  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/setup/05file: Only purge if CHROOT_SESSION_PURGE is
	set, as an additional extra safety measure.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* TODO: Remove completed item.

	* bin/schroot-mount/schroot-mount-main.cc: Ensure fstab fs_dir has
	a leading /.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot.h: Add missing comma.

2008-01-17  Roger Leigh  <rleigh@debian.org>

	* bin/schroot/schroot-setup.5.in: Document SCHROOT_SESSION_CREATE,
	SCHROOT_SESSION_CLONE, and SCHROOT_SESSION_PURGE,

	* bin/schroot/setup/00check, bin/schroot/exec/00check: Print
	SCHROOT_SESSION_CREATE, SCHROOT_SESSION_CLONE,
	SCHROOT_SESSION_PURGE, FSTAB and SBUILD values.

	* sbuild/sbuild-chroot-block-device.cc,