@@ -90,6 +90,9 @@ public:
     expected.add("CHROOT_PATH",           "/mnt/mount-location");
     expected.add("CHROOT_MOUNT_DEVICE",   "/dev/device-to-mount");
     expected.add("CHROOT_SCRIPT_CONFIG",  sbuild::normalname(std::string(PACKAGE_SYSCONF_DIR) + "/script-defaults"));
+    expected.add("CHROOT_SESSION_CLONE", "true");
+    expected.add("CHROOT_SESSION_CREATE", "true");
+    expected.add("CHROOT_SESSION_PURGE", "false");
 
     test_chroot_base<chroot_file>::test_setup_env(expected);
   }
@@ -97,7 +100,8 @@ public:
   void test_session_flags()
   {
     CPPUNIT_ASSERT(chroot->get_session_flags() ==
-		   sbuild::chroot::SESSION_CREATE);
+		   sbuild::chroot::SESSION_CREATE |
+		   sbuild::chroot::SESSION_CLONE);
   }
 
   void test_print_details()
