@@ -112,6 +112,9 @@ public:
     expected.add("CHROOT_LVM_SNAPSHOT_DEVICE", "/dev/snaptestdev");
     expected.add("CHROOT_LVM_SNAPSHOT_OPTIONS", "--size 1G");
     expected.add("CHROOT_SCRIPT_CONFIG",  sbuild::normalname(std::string(PACKAGE_SYSCONF_DIR) + "/script-defaults"));
+    expected.add("CHROOT_SESSION_CLONE", "true");
+    expected.add("CHROOT_SESSION_CREATE", "true");
+    expected.add("CHROOT_SESSION_PURGE", "false");
 
     test_chroot_base<chroot_lvm_snapshot>::test_setup_env(expected);
   }
@@ -119,7 +122,8 @@ public:
   void test_session_flags()
   {
     CPPUNIT_ASSERT(chroot->get_session_flags() ==
-		   sbuild::chroot::SESSION_CREATE);
+		   sbuild::chroot::SESSION_CREATE |
+		   sbuild::chroot::SESSION_CLONE);
   }
 
   void test_print_details()
