@@ -91,6 +91,9 @@ public:
     expected.add("CHROOT_PATH",           "/srv/chroot/example-chroot");
     expected.add("CHROOT_MOUNT_DEVICE",   "/dev/device-to-mount");
     expected.add("CHROOT_SCRIPT_CONFIG",  sbuild::normalname(std::string(PACKAGE_SYSCONF_DIR) + "/script-defaults"));
+    expected.add("CHROOT_SESSION_CLONE", "false");
+    expected.add("CHROOT_SESSION_CREATE", "false");
+    expected.add("CHROOT_SESSION_PURGE", "false");
 
     test_chroot_base<chroot_plain>::test_setup_env(expected);
   }
@@ -102,7 +105,7 @@ public:
 
     chroot->set_run_setup_scripts(true);
     CPPUNIT_ASSERT(chroot->get_session_flags() ==
-		   sbuild::chroot::SESSION_CREATE);
+		   sbuild::chroot::SESSION_NOFLAGS);
   }
 
   void test_print_details()
