@@ -1,3 +1,11 @@
+2008-01-20  Roger Leigh  <rleigh@debian.org>
+
+	* test/test-sbuild-chroot.h: Print environment variable names on
+	error.
+
+	* test/sbuild-chroot*.cc: Update environment and session flags
+	checks.
+
 2008-01-19  Roger Leigh  <rleigh@debian.org>
 
 	* bin/schroot/setup/20copyfiles
